<resources>
    <string name="app_name">Deimos-Events</string>
    <string name="title_events">Events</string>
    <string name="title_qr_code">QR Code</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_images">Images</string>
    <string name="title_users">Users</string>
    <string name="go_back">Go Back</string>
    <string name="facility_name_label">Name:</string>
    <string name="facility_phone_number_label">Phone:</string>
    <string name="notifications">Notifications</string>

</resources>