<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_entrants_events">
    <fragment
        android:id="@+id/navigation_entrants_events"
        android:name="com.example.deimos_events.ui.events.EventsEntrantsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_entrants_events" >
        <action
            android:id="@+id/action_navigation_entrants_events_to_navigation_event_info"
            app:destination="@id/navigation_event_info" />
    </fragment>

    <fragment
        android:id="@+id/navigation_qr_code"
        android:name="com.example.deimos_events.ui.qr_code.QRCodeFragment"
        android:label="@string/title_qr_code"
        tools:layout="@layout/fragment_qr_code" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.deimos_events.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.deimos_events.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>