<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_administrators_events">
    <fragment
        android:id="@+id/navigation_administrators_events"
        android:name="com.example.deimos_events.ui.events.EventsAdministratorsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_administrators_events" >
    </fragment>
    <fragment
        android:name="com.example.deimos_events.ui.notifications.NotificationsFragmentAdmin"
        android:id="@+id/navigation_notifications"
        android:label="insert name"
        tools:layout="@layout/fragment_notifications">
    <argument
        android:name="actorName"
        app:argType="string" />
    <argument
        android:name="orgId"
        app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_images"
        android:name="com.example.deimos_events.ui.images.ImagesFragment"
        android:label="@string/title_images"
        tools:layout="@layout/fragment_administrators_images" />

    <fragment
        android:id="@+id/navigation_users"
        android:name="com.example.deimos_events.ui.users.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_administrators_users" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.deimos_events.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>