<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_organizers_events">
    <fragment
        android:id="@+id/navigation_edit"
        android:label="Edit"
        android:name="com.example.deimos_events.ui.EditEvent.EditFragment"
        tools:layout="@layout/fragment_view_and_change_image">
        <action
            android:id="@+id/action_navigation_edit_to_navigation_map"
            app:destination="@id/navigation_map" />
    </fragment>
    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.deimos_events.ui.map.map"
        android:label="map"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/navigation_create"
        android:name="com.example.deimos_events.ui.createEvent.createFragment"
        android:label="Create Events"
        tools:layout="@layout/fragment_create_event">
        <action
            android:id="@+id/action_navigation_create_to_navigation_map"
            app:destination="@id/navigation_map" />
    </fragment>

    <!-- NEED TO CHANGE APP:DESTINATION TO PROPER FRAGMENT !!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
    <fragment
        android:id="@+id/navigation_organizers_events"
        android:name="com.example.deimos_events.ui.events.EventsOrganizersFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_organizers_events" >
        <action
            android:id="@+id/action_navigation_events_to_navigation_create"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_organizers_events_to_navigation_create"
            app:destination="@id/navigation_create" />
        <action
            android:id="@+id/action_navigation_organizers_events_to_navigation_edit"
            app:destination="@id/navigation_edit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_qr_code"
        android:name="com.example.deimos_events.ui.qr_code.QRCodeFragment"
        android:label="@string/title_qr_code"
        tools:layout="@layout/fragment_qr_code" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.deimos_events.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.deimos_events.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>